# VietNam-Legal-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  test_gemini.py
data/: README.md
data/eval/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: ARCHITECTURE.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  ablation_results.md  architecture.md  data-model.md  domains.md  e2e_evaluation_results.json  error_analysis.md  roadmap.md
frontend/: app.js  index.html  styles.css
scripts/: ablation.py  build_index.py  error_analysis.py  eval.py  eval_e2e.py  generate_testset.py  generate_testset_heuristic.py  generate_testset_local.py  import_hf_dataset.py  ingest.py  mass_crawl.py  mass_ingest.py  query.py  scrape.py  test_graph_rag.py
src/vietnam_legal_rag/: __init__.py  config.py  paths.py  py.typed
src/vietnam_legal_rag/api/: __init__.py  server.py
src/vietnam_legal_rag/domains/: __init__.py  base.py  dan_su.py  giao_thong.py  hinh_su.py  lao_dong.py
src/vietnam_legal_rag/embeddings/: __init__.py  vietnamese.py
src/vietnam_legal_rag/eval/: __init__.py  citation_accuracy.py  e2e_evaluator.py  evaluator.py
src/vietnam_legal_rag/generation/: __init__.py  llm.py  prompts.py
src/vietnam_legal_rag/graph/: __init__.py  builder.py  neo4j_client.py  queries.py
src/vietnam_legal_rag/ingestion/: __init__.py  _regex.py  chunker.py  enrichment.py  loader.py  pipeline.py
src/vietnam_legal_rag/pipeline/: __init__.py  rag.py
src/vietnam_legal_rag/retrieval/: __init__.py  base.py  dense.py  graph.py  hybrid.py  reranker.py
src/vietnam_legal_rag/scrapers/: __init__.py  base.py  thuvienphapluat.py
src/vietnam_legal_rag/vectorstore/: __init__.py  chroma.py
tests/: __init__.py  test_ingestion.py  test_pipeline.py  test_retrieval.py  test_scrapers.py  test_smoke.py
tests/fixtures/: sample_law.meta.json  sample_law.txt
